# rag_based_mcp_server_using_pinecone

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  client.py  config.py  docker-compose.yml  eval.py  ingest.py  interfaces.py  main.py  models.py  ollama_models.py  pdf_chunking.py  pinecone_store.py  pyproject.toml  requirements.txt  retrieval.py  server.py
.github/workflows/: ci.yml
tests/: test_config.py  test_pdf_chunking.py  test_retrieval.py
