[project]
name = "rag-based-mcp-server-using-pinecone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=2.10.0",
    "ollama>=0.4.0",
    "pinecone>=6.0.0",
    "pypdf>=5.0.0",
    "python-dotenv>=1.1.0",
    "ragas==0.2.15",
    "langchain-community==0.3.27",
]
